2009-08-XX Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* include/mb_settings.h, src/utils/settings.c: libmboard can now 
	  read configuration settings from environment variables
	* :MBOARD_MEMPOOL_RECYCLE env var can be set to allow message 
	  boards to recycle allocated memory. (default: disabled)
	   
2009-07-20 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* configure.ac, src/parallel/*.c: Added --enable-developer config
	  option to enable additional debug level to be used by FLAME
	  developers. This will include additional run-time checks that
	  uses MPI routines, which is less portable since they may clash
	  with the communication thread when used with MPI libraries that
	  do not support full threading levels. 
	  
	* src/utis/banner.c: Version banner downsized
	
	* : Tagged as 0.2.0.1

2009-07-02 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/progs/mboard-check-minversion.in: Added script to allow users to 
	  check if the installed libmboard meets a minimum version requirement
	  
	* src/utils/avltree.c, include/mb_avltree.h: Added utility to create
	  search and manipulate an AVL binary search tree
	* src/utils/string_map.c, include/mb_string_map.h: Added utility to
	  keep track of unique strings. Used by MB_IndexMap_Create()
	  
	* src/*/indexmap_*: Introduction of the MB_IndexMap_*() routines
	* src/*/filter_*: Introduction of the MB_Filter_*() routines
	* src/*/function_*: Deprecation of the MB_Function_*() rutines
	
	* src/parallel/comm.c: All communication routines are now asynchronous 
	  and non-blocking
	* src/parallel/comm.c: Communication now falls back to full data 
	  replication if message tagging leads to buffers that are larger 
	  than the total board size. Filtering is instead performed by 
	  the recipient
	  
	* include/mb_parallel.h, src/parallel/comm.c, src/parallel/create.c, 
	  src/parallel/clear.c: Fixed critical bug where messages were being 
	  duplicated when board synced multiple times.
	  